Cache as a service

--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -70,6 +70,7 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('js/article_show.js') }}">
+    <script src="{{ asset('js/article_show.js') }}"></script>
+
 {% endblock %}
 
