Getting data from BD with doctrine

--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -9,19 +9,19 @@
                         <div class="col-sm-12">
                             <img class="show-article-img" src="{{ asset('images/asteroid.jpeg') }}">
                             <div class="show-article-title-container d-inline-block pl-3 align-middle">
-                                <h1>{{ title }}</h1>
+                                <h1>{{ article.title }}</h1>
                                 <span class="show-article-title ">{{ title }}</span>
                                 <br>
                                 <span class="align-left article-details"><img class="article-author-img rounded-circle" src="{{ asset('images/alien-profile.png') }}"> Mike Ferengi </span>
                                 <span class="pl-2 article-details"> 5 hours ago</span>
-                                <span class="pl-2 article-details"> <span class="js-like-article-count">5</span> <a href="{{ path('article_toggle_heart', {slug: slug}) }}" class="fa fa-heart-o like-article js-like-article"></a> </span>
+                                <span class="pl-2 article-details"> <span class="js-like-article-count">5</span> <a href="{{ path('article_toggle_heart', {slug: article.slug}) }}" class="fa fa-heart-o like-article js-like-article"></a> </span>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="article-text">
-                                {{ articleContent | raw}}
+                                {{ article.content | markdown}}
                             </div>
                         </div>
                     </div>
