--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -10,7 +10,7 @@
                             <img class="show-article-img" src="{{ asset('images/asteroid.jpeg') }}">
                             <div class="show-article-title-container d-inline-block pl-3 align-middle">
                                 <h1>{{ article.title }}</h1>
-                                <span class="show-article-title ">{{ title }}</span>
+                                <span class="show-article-title ">{{ article.title }}</span>
                                 <br>
                                 <span class="align-left article-details"><img class="article-author-img rounded-circle" src="{{ asset('images/alien-profile.png') }}"> Mike Ferengi </span>
                                 <span class="pl-2 article-details"> {{ article.publishedAt ? article.publishedAt|ago : 'unpublished' }}</span>
